# charting-platform

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/platform-api/: Dockerfile  go.mod  go.sum
apps/platform-api/cmd/server/: main.go
apps/platform-api/internal/config/: config.go
apps/platform-api/internal/http/: routes.go
apps/platform-api/internal/market/: service.go
apps/platform-api/internal/valkey/: client.go
apps/platform-api/internal/websocket/: gateway.go
apps/platform-api/pkg/logger/: logger.go
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/chart/: page.tsx
apps/web/components/: ChartCanvas.tsx  ChartWorkspace.tsx  OrderBookPanel.tsx  RecentTradesPanel.tsx  StatusBar.tsx  TopToolbar.tsx
apps/web/hooks/: useChartData.ts  useMarketApi.ts  useMarketWebSocket.ts
apps/web/stores/: chartStore.ts
docs/architecture/: overview.md
docs/phases/: phase-1.md  phase-2.md
infra/docker/postgres/: init.sql  postgres.conf
infra/docker/valkey/: valkey.conf
services/connector-binance/: Cargo.toml  Dockerfile
services/connector-binance/src/: main.rs
services/connector-binance/src/binance/: mod.rs  ws_client.rs
services/connector-binance/src/config/: mod.rs
services/connector-binance/src/events/: mod.rs
services/connector-binance/src/trading/: mod.rs
services/connector-binance/src/valkey/: mod.rs
services/market-core/: Cargo.toml  Dockerfile
services/market-core/src/: main.rs
services/market-core/src/config/: mod.rs
services/market-core/src/processing/: mod.rs
services/market-core/src/state/: mod.rs
