[workspace]
resolver = "2"
members = [
    "services/connector-binance",
    "services/market-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chart Platform Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
