[package]
name = "connector-binance"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Binance Futures market data connector"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Redis/VALKEY client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client for REST API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["__rustls-tls"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
wiremock = "0.5"

[[bin]]
name = "connector-binance"
path = "src/main.rs"
